# MCConsoleCLI

./: .gitignore  README.md  config.json  main.py  pyproject.toml  server.py  ui.py  util.py  widgets.py
src/MCConsoleCLI/: main.py  ui.py  util.py
